--- a/server/public/css/cover.css
+++ b/server/public/css/cover.css
@@ -1,17 +1,10 @@
-/*!
- * Start Bootstrap - Full (https://startbootstrap.com/template-overviews/full)
- * Copyright 2013-2017 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-full/blob/master/LICENSE)
- */
-
 body {
-  background: url("../images/memories_pink.jpg") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
+   background: url(../images/memories_pink.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover ;
 }
-
 /* Coisas do título */
 
 header.masthead {
@@ -19,8 +12,12 @@ header.masthead {
   color: white;
 }
 
+html {
+  width: 100%;
+  height: 100%;
+}
 header.masthead .intro-text {
-  padding-top: 250px;
+  padding-top: 240px;
 }
 
 header.masthead .intro-text .intro-lead-in {
@@ -32,7 +29,7 @@ header.masthead .intro-text .intro-lead-in {
 }
 
 header.masthead .intro-text .intro-heading {
-  font-size: 50px;
+  font-size: 30px;
   font-weight: 700;
   line-height: 50px;
   margin-bottom: 25px;
@@ -62,17 +59,11 @@ header.masthead .intro-text .intro-heading {
       color: #f5dbcf;
       letter-spacing: 3px;
   }
-    .navbar-nav > li{
-  padding-left:10px;
-  padding-right:10px;
-}
+
 }
 
 /* Barra de cima transparente e talz */
-.navbar-brand img {
-  height: 100%;
-  margin-right: 20px;
-}
+
 
 /******************** LOGIN ******************/
 
@@ -89,6 +80,12 @@ header.masthead .intro-text .intro-heading {
 #login-dp .form-group {
     margin-bottom: 10px;
 }
+#login-dp .bottom{
+    background-color:rgba(255,255,255,.8);
+    border-top:1px solid #ddd;
+    clear:both;
+    padding:14px;
+}
 
 @media(max-width:768px){
     #login-dp{
@@ -102,15 +99,45 @@ header.masthead .intro-text .intro-heading {
     }
 }
 
+/******************** REGISTER ******************/
+
+#register-dp{
+    min-width: 250px;
+    padding: 14px 14px 0px;
+    overflow:hidden;
+    background-color:rgba(255,255,255,0.5);
+}
+#register-dp .help-block{
+    font-size:12px    
+}
+
+#register-dp .form-group {
+    margin-bottom: 10px;
+}
+
+#register-dp .bottom{
+    background-color:rgba(255,255,255,.8);
+    border-top:1px solid #ddd;
+    clear:both;
+    padding:14px;
+}
+
+
+@media(max-width:768px){
+    #register-dp{
+        background-color: inherit;
+        color: #fff;
+        background-color:rgba(255,255,255,0.5);
+    }
+    #register-dp .bottom{
+        background-color: inherit;
+        border-top:0 none;
+    }
+}
+
 /*** Remover a seta que fica ao lado do login e registar ***/
 .dropdown-toggle::after {
     display:none;
-}
-
-/* Mais espaço entre as opções do menu */
-.navbar > li{
-  padding-left:10px;
-  padding-right:10px;
 }
 
 /*
@@ -121,11 +148,28 @@ header.masthead .intro-text .intro-heading {
 */
 
 /*Modifica a cor das letras na navbar */
-.nav.navbar.ml-auto li a{
+/*.nav.navbar.ml-auto li a{
+  color: #f5dbcf;
+    font-family: 'Muli';  
+}*/
+
+/****************** NAVBAR ****************/
+.navbar-nav > li > a{
   color: #f5dbcf;
     font-family: 'Muli';  
 }
 
+/* Mais espaço entre as opções do menu */
+.navbar-nav > li{
+  padding-left:10px;
+  padding-right:10px;
+}
+
+
+.navbar{
+    margin: auto;
+    z-index: 10px;
+}
 .col-md-12 {
     font-size: 12px;
    color: #f5dbcf;
@@ -148,4 +192,15 @@ header.masthead .intro-text .intro-heading {
 .success-popup  {
     transition: .3s ease all;
     font-family: 'Roboto', sans-serif;
+}
+
+/************FOOTER**********/
+.footer {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color: red;
+   color: white;
+   text-align: center;
 }
