--- a/server/views/cover.html
+++ b/server/views/cover.html
@@ -40,7 +40,7 @@
     <!-- Navigation -->
 
 <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
-    <a class="navbar-brand" href="/">  <img class="img-responsive" width="50px" height="" src="images/brain-logo-off.png"></a>
+    <a class="navbar-brand py-0" href="/">  <img class="img-responsive" width="50px" height="" src="images/brain-logo-off.png"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span> </button>
 
@@ -53,7 +53,7 @@
             
           
                  <!-- ESTE É PARA O LOGIN -->
-            <li class="dropdown nav-item">
+            <li class="dropdown nav-item py-0">
               <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown"><span class="fa fa-sign-in"></span> Login</a>
                 <ul id="login-dp" class="dropdown-menu">
                     <li>
@@ -83,7 +83,7 @@
                 </ul>
             </li>
                  <!-- ESTE É PARA O REGISTAR -->
-             <li class="dropdown nav-item">
+             <li class="dropdown nav-item py-0">
                 <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown"><span class="fa fa-user-circle"></span> Registe-se</a>
                     <ul id="register-dp" class="dropdown-menu">
                         <li>
