--- a/server/views/frontpage.html
+++ b/server/views/frontpage.html
@@ -3,7 +3,7 @@
     <head>
 
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <meta name="description" content="">
         <meta name="author" content="">
 
@@ -15,12 +15,13 @@
         <!-- Bootstrap core JavaScript -->
         <script src="vendor/jquery/jquery.min.js"></script>
         <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+        
         <!-- Bootstrap core CSS -->
         <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Custom styles for this template -->
         <link href="/css/frontpage.css" rel="stylesheet">
+        <link href="/css/transversal.css" rel="stylesheet">
 
         <!-- Font Awesome -->
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -38,17 +39,70 @@
     <body>
     <!-- Navigation -->
 
-        <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
-            <a class="navbar-brand" href="/">  <img class="img-responsive" width="50px" height="" src="images/brain_vr.png"></a>
+        <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+            <a class="navbar-brand py-0" href="/">  <img class="img-responsive" width="50px" height="" src="images/brain-logo-off.png"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span> </button>
+        <span class="navbar-toggler-icon"></span> </button>
+            <p class="navbar-text text-uppercase">ImmersiveMind</p>
 
               <!-- Aqui começam as opções do menu -->    
 
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav ml-auto">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Olá, Ana Li <b class="caret"></b></a>
+                                <ul class="dropdown-menu dropdown-menu-right">
+                                    <li><a href="#">Logout <i class="fa fa-sign-out"></i></a></li>
+                            </ul>
+                        </li>
                 </ul>
             </div>
         </nav>
+        
+ 
+    <!-- Page Content -->
+<div class="container-fluid">
+    
+        <div class="btn btn-default btn-arrow-right"><span class="fa fa-home"></span></div>
+        <!--<div class="btn btn-default btn-arrow-right">Ola</div>
+        <div class="btn btn-default btn-arrow-right">Danger</div>-->
+
+
+      <!-- Page Heading -->
+
+      <div class="card-deck">
+          <div class="card">
+            <a href="#"><img class="card-img-top" src="images/crop/cardboardLadyagain.jpg" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a a href="#">Iniciar Actividade</a>
+              </h4>
+              <p class="card-text">Sem qualquer passo intermédio, inicie de imediato a visualização de vídeos.</p>
+            </div>
+          </div>
+          <div class="card">
+            <a href="#"><img class="card-img-top" src="images/crop/checklistagain.jpg" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a a href="#">Planear Actividade</a>
+              </h4>
+              <p class="card-text">Planeie com antecedência os vídeos que pretende observar.</p>
+            </div>
+          </div>
+          <div class="card">
+            <a href="#"><img class="card-img-top" src="images/crop/planningagain.jpg" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a a href="#">Gerir Utentes</a>
+              </h4>
+              <p class="card-text">Crie e/ou modifique a informação associada aos utentes a seu cuidado.</p>
+                
+            </div>
+             
+          </div>
+      </div>
+      <!-- /.row -->
+
+    </div>
     </body>
 </html>
