--- a/server/views/frontpage.html
+++ b/server/views/frontpage.html
@@ -50,7 +50,7 @@
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav ml-auto">
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Olá, Ana Li <b class="caret"></b></a>
+                            <a href="#" id="primeiroultimonome" class="dropdown-toggle textuser" data-toggle="dropdown">Olá, Ana Li <b class="caret"></b></a>
                                 <ul class="dropdown-menu dropdown-menu-right">
                                     <li><a href="#">Logout <i class="fa fa-sign-out"></i></a></li>
                             </ul>
