--- a/server/public/css/transversal.css
+++ b/server/public/css/transversal.css
@@ -15,27 +15,44 @@
 	   -moz-box-shadow: 0 8px 20px -6px black;
 	        box-shadow: 0 8px 20px -6px black;
     margin: auto;
-    z-index: 10px;
+    
 }
 
 .navbar-text{
-     position: absolute;
-    width: 100%;
+    position: relative;
+    width: 50%;
     left: 0;
     text-align: center;
-    margin: auto;
+    margin: 0;
     padding-top: 10px;
     font-family: 'Chonburi';
     color: #f5dbcf !important;
     font-size: 100%;
+    vertical-align: text-top;
 }
 
 .textuser:hover{
-    font-weight:bold;
+    color: antiquewhite;
     text-decoration: none;
 }
 
-@media (min-width: 455px) {
+#logout{
+    font-family: 'Muli' !important;
+    color: white !important;
+}
+#logout:hover{
+    color: #f5dbcf !important;
+    text-decoration: none;
+}
+.bread{
+    color: #3f3f3f !important;
+}
+.bread:hover{
+    text-decoration: none !important;
+    color: white !important;
+}
+
+@media (min-width: 768px) {
     .navbar-text{
          position: absolute;
         width: 100%;
