--- a/server/views/cover.html
+++ b/server/views/cover.html
@@ -139,7 +139,7 @@
           <div class="modal-body text-center">
              <img id="img-registo" class="img-responsive" width="80px" height="" src="images/SmileFaceFail.png" >
               <p id="msnregisto" class="lead">Oops, aconteceu algum problema!</p>
-              <button data-dismiss="modal" class="btn btn-default button-popup-fail" id="btnpopupregisto">Tente outra vez</button>
+              <button data-dismiss="modal" class="btn btn-default btn-lg button-popup-fail" id="btnpopupregisto">Tente outra vez</button>
           </div>
         </div>
       </div>
