--- a/server/views/frontpage.html
+++ b/server/views/frontpage.html
@@ -38,6 +38,8 @@
     </head>
 
     <body>
+        
+         <!-- ***********************************************NAVBAR E TRALHA*************************************************** -->
     <!-- Navigation -->
 
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
@@ -53,22 +55,46 @@
                         <li class="dropdown">
                             <a href="#" id="primeiroultimonome" class="dropdown-toggle textuser" data-toggle="dropdown">Olá, Ana Li <b class="caret"></b></a>
                                 <ul class="dropdown-menu dropdown-menu-right">
-                                    <li><a href="#" id="logout">Logout <i class="fa fa-sign-out"></i></a></li>
+                                    <li><a href="#" id="logout" data-toggle="modal" data-target="#myModal" data-backdrop="static" data-keyboard="false">Logout <i class="fa fa-sign-out"></i></a></li>
                             </ul>
                         </li>
                 </ul>
             </div>
         </nav>
-        
  
+<!-- Popup do LOGOUT -->
+    <div class="modal fade success-popup" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="myModalLabel">Sair de ImmersiveMind?</h4>
+            </div>
+            <div class="modal-body text-center">
+              
+              
+                <img class="img-responsive center" width="100px" height="" src="images/brain-logo-off-inverted.png">
+            <p></p>
+                <div class="row">
+                    <div class="col-sm-6">
+                       <button data-dismiss="modal" class="btn btn-default btn-lg btn-block button-popup-success">Ficar :)</button> 
+                    </div>
+                    <div class="col-sm-6">
+                        <button data-dismiss="modal" onclick="Logout()" class="btn btn-default btn-lg btn-block button-popup-fail">Sair :(</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </div>
+    </div> 
+        
     <!-- Page Content -->
 <div class="container-fluid">
     
-        <div class="btn btn-default btn-arrow-right"><a href="#"><span class="fa fa-home bread"></span></a></div>
+        <div class="btn btn-default btn-arrow-right"><a href=""><span class="fa fa-home bread"></span></a></div>
         <!--<div class="btn btn-default btn-arrow-right">Ola</div>
         <div class="btn btn-default btn-arrow-right">Danger</div>-->
 
-
+<!-- ******************************************************************************************************************* -->
       <!-- Page Heading -->
 
       <div class="card-deck">
@@ -91,10 +117,10 @@
             </div>
           </div>
           <div class="card">
-            <a href="#"><img class="card-img-top" src="images/crop/planningagain.jpg" alt=""></a>
+            <a href="patients"><img class="card-img-top" src="images/crop/planningagain.jpg" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a a href="#">Gerir Utentes</a>
+                <a a href="patients">Gerir Utentes</a>
               </h4>
               <p class="card-text">Crie e/ou modifique a informação associada aos utentes a seu cuidado.</p>
                 
