Inclui novo css do managepatients.css e tem já o template integrado.

--- a/server/public/css/transversal.css
+++ b/server/public/css/transversal.css
@@ -1,3 +1,15 @@
+/********************BODY*************/
+
+body {
+ /* padding-top: 58px;*/
+    background-color: #343A40;
+}
+
+body html{
+	height: 100%;
+}
+
+
 /**************************** NAVBAR ********************************/
 .navbar-nav > li > a{
     color: #f5dbcf;
@@ -67,6 +79,24 @@
 
 }
 /*********************************************************************/
+
+/********************************** BOTAO LOGOUT ***********************/
+
+.dropdown-menu {
+    background-color: rgba(255,255,255,0.5);
+     
+}
+.dropdown-menu li a{
+   color: white !important;
+    text-align: right !important;
+}
+
+.dropdown-menu li{
+    /*margin-right: 21px;*/
+    text-align: center !important;
+    font-size: 120%;
+}
+/***************************************************************/
 
 /* Setinha ao lado do login*/
 /*.dropdown-toggle::after {
