--- a/server/views/managepatients.html
+++ b/server/views/managepatients.html
@@ -21,7 +21,7 @@
         <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Custom styles for this template -->
-        <link href="/css/frontpage.css" rel="stylesheet">
+        <link href="/css/managepatients.css" rel="stylesheet">
         <link href="/css/transversal.css" rel="stylesheet">
 
         <!-- Font Awesome -->
@@ -96,6 +96,49 @@
             <!--<div class="btn btn-default btn-arrow-right">Danger</div>-->
         
  <!-- ******************************************************************************************************************* -->
+
+      <!-- Team Members Row -->
+        <p></p>
+      <div class="row">
+        <div class="col-lg-4 col-sm-6 text-center mb-4">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+          <h3>John Smith
+          </h3>
+        </div>
+        <div class="col-lg-4 col-sm-6 text-center mb-4">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+          <h3>John Smith
+          </h3>
+        </div>
+        <div class="col-lg-4 col-sm-6 text-center mb-4">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+          <h3>John Smith
+          </h3>
+        </div>
+        <div class="col-lg-4 col-sm-6 text-center mb-4">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+          <h3>John Smith
+          </h3>
+        </div>
+        <div class="col-lg-4 col-sm-6 text-center mb-4">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+          <h3>John Smith
+          </h3>
+        </div>
+        <div class="col-lg-4 col-sm-6 text-center mb-4">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+          <h3>John Smith
+          </h3>
+        </div>
+      </div>
+
+    </div>
+    <!-- /.container -->
+
+  </body>
+
+</html>
+
             
         </div>
     </body>
