Bolinhas acrescentadas e funcionais + exemplo do Pastel de Belém é útil.

--- a/server/views/managepatients.html
+++ b/server/views/managepatients.html
@@ -11,6 +11,7 @@
         <title>ImmersiveMind</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="/js/server.js"></script>
+        <script src="/js/popular.js"></script>
 
 
         <!-- Bootstrap core JavaScript -->
@@ -99,8 +100,8 @@
 
       <!-- Team Members Row -->
         <p></p>
-      <div class="row">
-        <div class="col-lg-4 col-sm-6 text-center mb-4">
+      <div class="row" id="rowbolinhas">
+       <!--<div class="col-lg-4 col-sm-6 text-center mb-4">
           <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
           <h3>John Smith
           </h3>
@@ -129,7 +130,7 @@
           <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
           <h3>John Smith
           </h3>
-        </div>
+        </div>-->
       </div>
 
     </div>
@@ -137,9 +138,4 @@
 
   </body>
 
-</html>
-
-            
-        </div>
-    </body>
 </html>
