--- a/server/views/managepatients.html
+++ b/server/views/managepatients.html
@@ -18,12 +18,14 @@
         <script src="vendor/jquery/jquery.min.js"></script>
         <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
         
+        
         <!-- Bootstrap core CSS -->
         <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
+    
         <!-- Custom styles for this template -->
         <link href="/css/managepatients.css" rel="stylesheet">
         <link href="/css/transversal.css" rel="stylesheet">
+    
 
         <!-- Font Awesome -->
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -98,41 +100,98 @@
         
  <!-- ******************************************************************************************************************* -->
 
-      <!-- Team Members Row -->
-        <p></p>
-      <div class="row" id="rowbolinhas">
-       <!--<div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
-          <h3>John Smith
-          </h3>
-        </div>
-        <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
-          <h3>John Smith
-          </h3>
-        </div>
-        <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
-          <h3>John Smith
-          </h3>
-        </div>
-        <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
-          <h3>John Smith
-          </h3>
-        </div>
-        <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
-          <h3>John Smith
-          </h3>
-        </div>
-        <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
-          <h3>John Smith
-          </h3>
-        </div>-->
-      </div>
+        <!-- Team Members Row -->
+            <p></p>
+        <div class="row" id="rowbolinhas">
+           <!--<div class="col-lg-4 col-sm-6 text-center mb-4">
+              <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+              <h3>John Smith
+              </h3>
+            </div>
+            <div class="col-lg-4 col-sm-6 text-center mb-4">
+              <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+              <h3>John Smith
+              </h3>
+            </div>
+            <div class="col-lg-4 col-sm-6 text-center mb-4">
+              <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+              <h3>John Smith
+              </h3>
+            </div>
+            <div class="col-lg-4 col-sm-6 text-center mb-4">
+              <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+              <h3>John Smith
+              </h3>
+            </div>
+            <div class="col-lg-4 col-sm-6 text-center mb-4">
+              <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+              <h3>John Smith
+              </h3>
+            </div>
+            <div class="col-lg-4 col-sm-6 text-center mb-4">
+              <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+              <h3>John Smith
+              </h3>
+            </div>-->
+          </div>
 
+    </div>
+        
+   <!-- Button to open the modal login form -->
+
+<!-- Popup do Plus -->
+    <div class="modal fade success-popup" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="myModalLabel">Novo Utente</h4>
+            </div>
+            <div class="modal-body">
+                <!-- Formulário -->
+                <form class="form" id="registernav" role="form">
+                                                <div class="form-group">
+                                                     <label class="sr-only" for="exampleInputEmail2">Email</label>
+                                                     <input type="email" class="form-control" id="emailregistar" placeholder="Endereço Electrónico" required>
+                                                </div>
+
+                                                <div class="form-group">
+                                                    <label class="sr-only" for="exampleFirstName">Primeiro Nome</label>
+                                                    <input type="text" class="form-control" id="primeironomecuidador" placeholder="Primeiro nome" required>
+                                                </div>
+                                                <div class="form-group">
+                                                    <label class="sr-only" for="exampleLastName">Último Nome</label>
+                                                    <input type="text" class="form-control" id="ultimonomecuidador" placeholder="Último Nome" required>
+                                                </div>
+                                                <div class="form-group">
+                                                    <label class="sr-only" for="exampleProfissao">Profissão</label>
+                                                    <input type="text" class="form-control" id="profissao" placeholder="Profissão">
+                                                </div>
+                                                <div class="form-group">
+                                                     <label class="sr-only" for="exampleInputPassword2">Password</label>
+                                                     <input type="password" class="form-control" id="passwordregistar" placeholder="Palavra-passe" required>
+                                                    <!-- Isto pode ser para um futuro -->
+                                                     <!--<div class="help-block text-right"><a href="">Forget the password ?</a></div>-->
+                                                </div>
+                                                <div class="form-group">
+                                                     <button type="button" onclick="RegistaCuidador()" class="btn btn-primary btn-block" data-toggle="modal" data-target="#myModal" data-backdrop="static" data-keyboard="false" id="buttonregistar" disabled="true">Registar!</button>
+                                                </div>
+                                         </form>
+                
+                <!-- Fim do Formulário -->
+              
+               
+            <p></p>
+                <div class="row">
+                    <div class="col-sm-6">
+                       <button data-dismiss="modal" class="btn btn-default btn-lg btn-block button-popup-success">Ficar :)</button> 
+                    </div>
+                    <div class="col-sm-6">
+                        <button data-dismiss="modal" onclick="Logout()" class="btn btn-default btn-lg btn-block button-popup-fail">Sair :(</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </div>
     </div>
     <!-- /.container -->
 
