--- a/server/public/css/managepatients.css
+++ b/server/public/css/managepatients.css
@@ -9,6 +9,8 @@ h3{
 }
 
 .bolitas{
+    background-image:url(../images/bolinhas_default.png);
+    background-color: white !important;
     width:200px; 
     height:200px;
     background-position:50% 50%;
@@ -18,6 +20,10 @@ h3{
     -webkit-box-shadow: 5px 5px 17px 1px rgba(0,0,0,0.7);
     -moz-box-shadow: 5px 5px 17px 1px rgba(0,0,0,0.7);
     box-shadow: 5px 5px 17px 1px rgba(0,0,0,0.7);
+}
+
+.bolitas:hover{
+    -webkit-filter: brightness(110%);
 }
 
 .bolitas_plus{
@@ -35,63 +41,94 @@ h3{
 
 
 .bolitas_plus:hover{
-    background-image:url('../images/plus_sign_cool_pressed.png');
+    /*background-image:url('../images/plus_sign_cool_pressed.png');*/
+    -webkit-filter: brightness(110%);
 }
 
 /*********************** popup do plus **************************/
-/* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    padding-top: 60px;
+.modal-titulo{
+    font-family: 'Muli';
+    color: #7e7e7e;
 }
 
-/* Modal Content/Box */
-.modal-content {
-    background-color: #fefefe;
-    margin: 5px auto; /* 15% from the top and centered */
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+.modal-body{
+    font-family: 'Muli';
 }
 
-/* The Close Button */
-.close {
-    /* Position it in the top right corner outside of the modal */
+/*****************************Opção Procurar *********************/
+.btn-file {
+    position: relative;
+    overflow: hidden;
+    background: #7e7e7e;
+    border: #7e7e7e;
+    color: white;
+}
+
+.btn-file:hover {
+    background: #f5dbcf;
+    color: #3f3f3f;
+    border: #f5dbcf;
+}
+
+.btn-file input[type=file] {
     position: absolute;
-    right: 25px;
-    top: 0; 
-    color: #000;
-    font-size: 35px;
-    font-weight: bold;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
 }
 
-/* Close button on hover */
-.close:hover,
-.close:focus {
-    color: red;
-    cursor: pointer;
+.box-img{
+    background: rgba(255,255,255,0) !important;
 }
 
-/* Add Zoom Animation */
-.animate {
-    -webkit-animation: animatezoom 0.6s;
-    animation: animatezoom 0.6s
+.btn-add {
+    position: relative;
+    overflow: hidden;
+    background: #7e7e7e;
+    border: #7e7e7e;
+    color: white;
 }
 
-@-webkit-keyframes animatezoom {
-    from {-webkit-transform: scale(0)} 
-    to {-webkit-transform: scale(1)}
+.btn-add:hover {
+    background: #f5dbcf;
+    color: #3f3f3f;
+    border: #f5dbcf;
 }
 
-@keyframes animatezoom {
-    from {transform: scale(0)} 
-    to {transform: scale(1)}
+/**** Preview da imagem no novo utente *****/
+.bolita_preview{
+    width:200px !important; 
+    height:200px !important;
+    background-position:50% 50% !important;
+    background-repeat:no-repeat !important;
+    background-size: cover !important;
+    background-position: top center !important;
+}
+
+/****** Modificação do Modal ******/
+.modal-header
+ {
+     padding:9px 15px;
+     border-bottom:0px solid #3f3f3f;
+     background-color: #f5dbcf;
+ }
+
+.modal-title{
+    text-align: center;
+}
+ .modal-header .close{
+    position: inherit;
+}
+
+.modal-footer{
+    border-top: 1px solid #7e7e7e;
 }
